@@ -2157,8 +2157,10 @@ static void
 tny_camel_folder_get_headers_async_destroyer (gpointer thr_user_data)
 {
 	GetHeadersInfo *info = thr_user_data;
+	TnyCamelFolderPriv *priv = TNY_CAMEL_FOLDER_GET_PRIVATE (info->self);
 
 	/* thread reference */
+	_tny_camel_folder_unreason (priv);
 	g_object_unref (info->self);
 	g_object_unref (info->headers);
 
@@ -2204,9 +2206,11 @@ static void
 tny_camel_folder_get_headers_async_cancelled_destroyer (gpointer thr_user_data)
 {
 	GetHeadersInfo *info = thr_user_data;
+	TnyCamelFolderPriv *priv = TNY_CAMEL_FOLDER_GET_PRIVATE (info->self);
 
 	if (info->err)
 		g_error_free (info->err);
+	_tny_camel_folder_unreason (priv);
 	g_object_unref (info->self);
 	g_object_unref (info->headers);
 
@@ -2258,6 +2262,7 @@ tny_camel_folder_get_headers_async_default (TnyFolder *self, TnyList *headers, g
 	g_object_ref (info->self);
 	g_object_ref (info->headers);
 
+	_tny_camel_folder_reason (priv);
 	_tny_camel_queue_cancel_remove_items (TNY_FOLDER_PRIV_GET_QUEUE (priv), 
 		TNY_CAMEL_QUEUE_GET_HEADERS_ITEM|TNY_CAMEL_QUEUE_SYNC_ITEM|
 		TNY_CAMEL_QUEUE_REFRESH_ITEM);
